fix: fixed content overflow
This fixes the content overflow of dom elements after scrollreveal's animation ends.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,6 +43,13 @@
 }
 
 /*
+    PREVENTS CONTENT OVERFLOW
+*/
+html{
+	overflow: hidden;
+}
+
+/*
     BODY SECTION
 */
 html,
@@ -67,6 +74,9 @@ body {
 .main-heading {
     width: 560px;
     margin-bottom: 20px;
+}
+.main-heading span {
+	display: block;
 }
 .bold-text {
     font-family: "Poppins Semibold";
@@ -215,33 +225,42 @@ a {
 @media only screen and (max-width: 450px) {
 
     body {
-        display: grid;
         overflow: hidden;
         justify-content: center;
     }
 
     .header {
-        transform: scale(.6);
+		display: grid;
+		place-items: center;
         text-align: center;
         margin: 0;
     }
     .main-heading {
-        margin-bottom: 30px;
+        margin-bottom: 25px;
+    }
+    .bold-text {
+		font-size: 23px;
+    }
+    .thin-text {
+	   font-size: 19px;
     }
     .main-text{
-        font-size: 19px;
-        line-height: 35px;
+        line-height: 20px;
+        width: 92vw;
+        font-size: 13px;
     } 
+    
     .mySwiper {
         transform: scale(.7) translateX(-60px);
-        overflow: visible;
+        overflow: visible !important; /* Overwrites swiper's css rules */
+        padding-top: 35px;
     }
     .swiper-container {
         height: 100%;
     }
     .featured-card {
         width: 370px;
-        height: calc(100vh - 50vh);
+        height: calc(100vh - 40vh);
     }
     .author-link {
         transform: scale(.75);
